Adding Reassign Functionality For Shipment/Consol Screens - Optimised Code